<resources>
    <string name="app_name">Allot</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_user_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_tasks">Tasks</string>
    <string name="label_participants">Participants</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_name">Name</string>
    <string name="label_see_activities">See Activities</string>
    <string name="label_time">Date/Time</string>
    <string name="label_task">Task Name</string>
    <string name="text_tasks">Tasks</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="text_create_a_task">Create A Task</string>
    <string name="text_task_name">Task Name:</string>
    <string name="text_description">Description:</string>
    <string name="text_allot_to">Allot To:</string>
    <string name="button_choose_participant">Choose Participant</string>
    <string name="text_location">Location:</string>
    <string name="button_choose_location">Choose Location</string>
    <string name="title_activity_maps">Map</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_backend_test">BackendTestActivity</string>
    <string name="text_pick_location">Pick a location</string>
    <string name="label_select">Select</string>
    <string name="label_add">Add</string>
    <string name="label_set_time">Time:</string>
    <string name="permission_denied_explanation">Need permission for geofence alerts</string>
    <string name="settings">Settings</string>
    <string name="geofence_transition_entered">Your task is nearby. Click to view details</string>
    <string name="geofence_transition_exited">Exited a task area</string>
    <string name="unknown_geofence_transition">Unknown Geofence transition</string>
    <string name="button_set_time">Pick a time</string>
    <string name="hint_set_time">Set a time</string>
    <string name="button_set_time2">Choose Time</string>
    <string name="label_ok">OK</string>
    <string name="label_remind">Remind within</string>
    <string name="default_radiu">50</string>
    <string name="text_meters">meters</string>
    <string name="group_name">GROUP NAME</string>
    <string name="create_group">Create Group</string>
    <string name="username">username</string>
    <string name="hint_group_name">Enter Group Name</string>
    <string name="label_group_code">Group Code:</string>
    <string name="text_group_code">Group Code</string>
    <string name="label_task_completed">Task completed</string>
    <string name="text_motto">Split Work, Not Friends</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAaoqIze3wHZ9JzzIX1dUKzGrAdORvgig0</string>
    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyALSg3I4sNcji0xgFnbZqcMi1mB_IuA_qY </string>
</resources>
